scrollBar and fixes

--- a/src/components/style/NavBar.scss
+++ b/src/components/style/NavBar.scss
@@ -11,7 +11,11 @@ header {
 
     background: var(--c1);
 
-    & h1 {
+    .title {
+        font-size: 2rem;
+        font-weight: 800;
+
+        color: var(--ca);
     }
 
     & nav {
@@ -31,19 +35,20 @@ header {
             justify-content: center;
             align-items: end;
 
-            text-align: end;
-
+            
             width: 100%;
             height: 100%;
-
+            
             background: var(--c1);
-
+            
             & a {
                 position: relative;
                 z-index: 20;
-
+                
                 min-width: 20rem;
-
+                
+                text-align: end;
+                font-weight: 600;
                 font-size: 3rem;
 
                 margin: 0 10%;
@@ -69,6 +74,7 @@ header {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                object-position: right;
             }
         }
     }
