--- a/src/pages/style/Ch.scss
+++ b/src/pages/style/Ch.scss
@@ -27,8 +27,6 @@
 @media screen and (max-width:800px) {
     .Ch {
         & img {
-            top: 3.6rem;
-    
             height: calc(50svh - 3.6rem);
             width: 100%;
     
