--- a/src/pages/style/Landing.scss
+++ b/src/pages/style/Landing.scss
@@ -16,7 +16,7 @@ main {
         display: flex;
         flex-direction: column;
         align-items: end;
-        justify-content: center;
+        justify-content: space-evenly;
 
         gap: var(--gap);
 
@@ -49,8 +49,15 @@ main {
             }
         }
         & a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
             margin: 10%;
-            padding: calc(var(--gap)*2);
+            padding: calc(var(--gap)*1.5);
+            gap: var(--gap);
+
+            font-size: 1.2rem;
 
             border-radius: var(--gap);
     
